fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Base Styles */
 body {
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
     background-color: #1E201E;
     color: #ECDFCC;
